daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N19_bad_downgrade/kem_block.cbor.hex
a4005840dc6d858cd2a93b6f3b3289dcfec1f449ea755a0ab06b05a8a1dbb8fa62f5f7288aef79c11564cf3e9e111155cf2546652edce1617aad875bc2b36aacda4a3e9f01584033d1b5489dd06eea5cd8d62f79b75a179b1964c2a2b1a39d1d613477fb32724a66c55987033363f55d270e2c791e49d757b53db81f7bbe5c36b9d9c77f002d170258407bf24c9f0ed0e0c5ac0fb69bd83c47176ef2fd2b1311c4855fcc33413ceff674e3cc120d4265c86e3fa0137f1006fafe257a5f14fca3b7d6b5543ab30858ad83035840fcc3a45037964a82543dc4232d30d522dc3da561bb09c86d97f1b11ed12ef86547c26e6642925663378443030d7dd5cb8b27cb03a353f53aa525196491b5b017
